# news-feeds

./: .env  .env_example  .gitignore  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2681df47a368_initial.py  4a367687df59_initial.py
api/: crud.py  dependencies.py  exceptions.py  routes.py  schemas.py  security.py
api/endpoints/: auth.py
backend/: .env  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml
backend/alembic/versions/: 0b42b855e620_products.py  46a65fb29c4c_image_id.py  f1c18fd9d1b6_initial.py
backend/api/: crud.py  dependencies.py  exceptions.py  routes.py  schemas.py  security.py
backend/api/endpoints/: auth.py  feeds.py  products.py
backend/database/: models.py  sessions.py
backend/helpers/: populate_data.py
backend/monitoring/prometheus_data/: prometheus.yml
backend/settings/: base.py
backend/src/: main.py
backend/src/alembic/: env.py
backend/src/api/: crud.py  schemas.py  security.py
backend/src/database/: models.py
backend/src/settings/: base.py
database/: models.py  sessions.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  models.ts
frontend/src/components/: product.tsx
frontend/src/data/: products.ts
settings/: base.py
